src/main/resources/static/css/colors.css
@import "variables.css";
h1 {
    color: #BD9319;
}

h2, h3, h4, h5, h6 {
    color: #9B7506;
}
/* COLOR PALETTE */
/* colors as background */

.seafoam-bg {
    background-color: var(--seafoam);
    /*background-color: #f0f8f6;*/
    color: #222;
}

.cancel {
    color: #d21515;
}

.save {
    color: #007bff;
}

.deep-blue-bg {
    background-color: var(--deep-blue);
    color: #fff;
}

.green-blue-bg {
    background-color: var(--green-blue);
}

.dark-teal-bg {
    background-color: var(--dark-teal);
    color: #fff;
}

.teal-bg {
    background-color: var(--teal);
}

.blue-bg {
    background-color: var(--blue);
}

.light-teal-bg {
    background-color: var(--light-teal);
}

.teal-tint-bg {
    background-color: var(--teal-tint);
}

.black-bg {
    background-color: var(--uh-black);
    color: white;
}

.black-bg a,
.dark-teal-bg a {
    color: #fefefe;
    text-decoration: underline;
}

.black-bg a:hover,
.black-bg a:focus,
.black-bg a:active,
.dark-teal-bg a:hover,
.dark-teal-bg a:focus,
.dark-teal-bg a:active {
    color: LightGray;
}

.btn.dark-teal-bg:hover,
.btn.dark-teal-bg:focus,
.btn.dark-teal-bg:active {
    color: #efefef;
    background: #004e59;
}

/* bootstrap overrides */
.text-primary {
    color: var(--dark-teal) !important;
}

.text-muted {
    color: var(--teal) !important;
}

.text-info {
    color: var(--blue) !important;
}

.btn.btn-primary,
.btn.btn-lg {
    background: var(--dark-teal);
    border-color: transparent;
}

.btn.btn-primary:hover,
.btn.btn-primary:focus,
.btn.btn-primary:active,
.btn.btn-lg:hover,
.btn.btn-lg:focus,
.btn.btn-lg:active {
    background: var(--teal);
}

.btn.btn-sm:hover {
    background: var(--green-blue);
}

.btn-outline-secondary:hover,
.btn-outline-secondary:focus,
.btn-outline-secondary:active {
    background-color: var(--green-blue);
    border-color: var(--green-blue);
}

.nav-pills .nav-link.active,
.nav-pills .show>.nav-link {
    background: white;
    color: var(--dark-teal);
}

.nav-pills .nav-link.active {
    position: relative;
    background-color: #fff;
}

.nav-pills .nav-link.active:after {
    content: "";
    border-color: var(--teal);
    border-style: solid;
    width: 0;
    height: 0;
    border-style: solid;
    position: absolute;
}

@media screen and (max-width: 767.9px) {
    .nav-pills .nav-link.active:after {
        border-width: 0 10px 10px 10px;
        border-color: transparent transparent #fff transparent;
        bottom: -16px;
        left: 33%;
    }
}

@media screen and (min-width: 768px) {
    .nav-pills .nav-link.active:after {
        border-width: 10px 10px 10px 0;
        border-color: transparent #fff transparent transparent;
        top: 25%;
        right: -35px;
    }
}

@media screen and (min-width: 992px) {
    .nav-pills .nav-link.active:after {
        right: -18px;
    }
}

@media (min-width: 1200px) {
    .nav-pills .nav-link.active:after {
        right: -24px;
    }
}

.nav-pills .nav-link {
    color: var(--dark-teal);
    height: 44px;
}

body h1 {
    color: var(--uh-black);
    font-weight: 700;
}

#overlay {
    background: rgba(0, 0, 0, 0.5);
}

.uh-branding-one {
    color: #777;
}

.btn-link {
    color: var(--deep-blue);
}

.uh-branding-two {
    color: #777;
}

.dropshadow {
    text-shadow: 1px 1px 3px rgba(150, 150, 150, 1);
}

.fa.fa-trash-o {
    color: #d21515;
}

.page-item.active > .page-link {
    background-color: var(--teal-tint);
    border-color: var(--teal-tint);
}

#group-pills > .nav-item > .nav-link.active {
    /*background-color:*/
}

.card {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: transparent;
    background-clip: border-box;

}


/*.card-body {
    background: #f5f5f5;
    border-color: #b5bcc7;
}*/

.jumbotron .h1, .jumbotron h1 {
    font-size: 63px;
}

.jumbotron .h1, .jumbotron h1 {
    color: inherit;
}

.btn-group-lg > .btn, .btn-lg {
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.3333333;
    border-radius: 6px;
    background: #6fa9be;
    border-color: #5a9cb4;
    color: white;
}

.btn-default {
    background: #6fa9be;
}

.btn-default {
    background: #6fa9be;
    border-color: #5a9cb4;
    color: white;
}

.btn:hover #name,
.btn:focus #name,
.btn:active #name {
    color: #e3f2ef;
}

h1, h2, h5,.text-left, span {
    color: #1c6070;
}

.btn-light:hover {
    color: #212529;
    background-color: #e2e6ea;
    border-color: #dae0e5;
}

.border {
    background: white;
}

.table {
    background: white;
}

h3{
    color: #1c6070;
}

.loading-text{
    margin-left: 4.357em;
    color: #296191;
    float: left;
}

.done-text{
    color: #296191;
    text-align: right;
}

.link{
    color: #0050AD;
}

